<resources>
    <string name="app_name">乐购</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_confirm_login">Confirm Login</string>
    <string name="button_cancel_login">Cancel Login</string>
    <string name="button_confirm_signup">Confirm Sign Up</string>
    <string name="button_cancel_signup">Cancel Sign Up</string>
    <string name="edit_username">username</string>
    <string name="edit_password">password</string>
    <string name="try_again">重试</string>
    <string name="goon">继续</string>
    <string name="confirm">确认</string>
    <string name="lockpattern_error">"手势密码不对"</string>
    <string name="is_deverloping">is_deverloping</string>
    <string name="is_loadding">is_loadding</string>
    <string name="classify">分类</string>
    <string name="shopping">购物车</string>
    <string name="mine">我的</string>
    <string name="my_account">我的账户</string>
    <string name="login">登录</string>
    <string name="pt_user">普通用户</string>
    <string name="collect_service">收藏服务</string>
    <string name="collect_shop">收藏商品</string>
    <string name="look_history">浏览历史</string>
    <string name="order">订单</string>
    <string name="obligation">待付款</string>
    <string name="service">待服务</string>
    <string name="evaluate">待评价</string>
    <string name="assist">辅助</string>
    <string name="subscribe">预约</string>
    <string name="coupons">优惠券</string>
    <string name="sharemoney">分享赚钱</string>
    <string name="collection">收藏</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="title">标题</string>
    <string name="install_service_tv">配装服务</string>
    <string name="basic_building_tv">基础建材</string>
    <string name="house_service_tv">家政服务</string>
    <string name="steward_service_tv">管家服务</string>
    <string name="auxiliary_order">辅助下单</string>
    <string name="classify_my_account">我的足迹</string>
    <string name="service_classify_recommend">为你推荐</string>
    <string name="service_classify_brand_recommend">品牌推荐</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_recommend_friends">推荐好友</string>
    <string name="setting_service_terms">服务条款</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_check_update">检查更新</string>
    <string name="update_version_num">当前版本 V</string>
    <string name="setting_exit_login">退出登录</string>
    <string name="feed_back_type">反馈类型</string>
    <string name="feed_function_opinion">功能意见</string>
    <string name="feed_back_input_hint">请提出您宝贵的意见，我们将不断的优化</string>
    <string name="feed_back_input_tv">*限100字</string>
    <string name="feed_back_phone_input">请输入您的手机号/邮箱</string>
    <string name="mine_head_pic">头像</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_username">用户名</string>
    <string name="mine_sex">性别</string>
    <string name="mine_birsty">出生日期</string>
    <string name="band_phone">绑定手机</string>
    <string name="mine_service_address">服务地址管理</string>
    <string name="mine_city">所在城市</string>
    <string name="choose_from_the_album">从相册中选择</string>
    <string name="camera">拍照</string>
    <string name="cart_people_look">大家都在看</string>
    <string name="band_phone_info">绑定手机以后，可以用手机号登录</string>
    <string name="input_phone_hint">请输入您的手机号</string>
    <string name="input_code_hint">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="share_title">冠易贷中小企业金融专家，企业借款就到冠易贷！</string>
    <string name="share_content">冠易贷致力于为中小微实体企业提供多样性资金需求解决方案，深入研究调查中小微企业的发展现状，降低了中小微企业的资金成本压力。</string>
    <string name="new_customer">新增客户通知</string>
    <string name="new_customer_samll">新增客户</string>
    <string name="new_order">新增出借通知</string>
    <string name="new_order_small">新增出借</string>
    <string name="about_to_expire">即将到期通知</string>
    <string name="calling_card_info">说明：\n1、保存微名片：长按微名片，可将其保存到本地相册。\n2、分享微名片：通过社交平台分享微名片图片。（如：微信好友或朋友圈）\n3、分享注册链接：客户可通过此分享的页面注册，并享有冠e通平台当前用户注册奖励活动。</string>
    <string name="about_to_expire_small">即将到期</string>
    <string name="system_message_small">平台公告</string>
    <string name="myCustomer">我的客户</string>
    <string name="my_square">广场</string>
    <string name="my_square_title">营销新闻</string>
    <string name="business_card">微名片</string>
    <string name="data_statistics">数据统计</string>
    <string name="calling_card">微名片</string>
    <string name="no_message">暂无消息</string>
    <string name="name">姓名</string>
    <string name="mobile">联系手机</string>
    <string name="area">所在大区</string>
    <string name="login_password">登录密码</string>
    <string name="modify">修改</string>
    <string name="cannotopencamera">无法打开相机,请检查是否授予摄像机权限</string>
    <string name="cannotopenpicture">无法打开相册,请检查是否授予相册权限</string>
    <string name="getimagefail">获取图片失败</string>
    <string name="saveimagefail">获取图片失败</string>
    <string name="cannotsaveimage">无法保存图片,请检查是否授予sd卡储存权限</string>
    <string name="sessionout">登录状态已失效，请重新登录</string>
    <string name="mysquare_achievementtitle">业绩排行榜（月）</string>
    <string name="mysquare_newcustomertitle">新增客户排行榜（月）</string>
    <string name="mysquare_customerrecommendationtitle">客户推荐排行榜（月）</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bid">立即投标</string>
    <string name="tag_bid">投标</string>
    <string name="home">首页</string>
    <string name="asset">账户</string>
    <string name="customer">借款</string>
    <string name="square">广场</string>
    <string name="me">我</string>
    <string name="my">我的</string>
    <string name="callingcard_save">保存到本地</string>
    <string name="callingcard_share">分享微名片</string>
    <string name="callingcard_shareUrl">分享注册链接</string>
    <string name="dealOne">已成功出借金额</string>
    <string name="dealTwo">已赚取利息</string>
    <string name="dealThree">我要借款</string>
    <string name="loanproject">出借项目</string>
    <string name="redeemproject">赎回项目</string>
    <string name="back">返回</string>
    <string name="details_title">投标详情</string>
    <string name="setting_title">设置</string>
    <string name="personal_information_title">个人信息</string>
    <string name="recharge_title">充值</string>
    <string name="withdrawals_title">提现</string>
    <string name="project_title">产品介绍</string>
    <string name="investment_records_title">投资记录</string>
    <string name="details_redeem_title">赎回详情</string>
    <string name="agreement">借款协议</string>
    <string name="details_rate">年华利率</string>
    <string name="details_money">总金额(元)</string>
    <string name="details_term">还款期限</string>
    <string name="details_security_one">信用贷款</string>
    <string name="details_security_two">100%本金保障</string>
    <string name="Hot">Hot</string>
    <string name="Price">Price</string>
    <string name="New">New</string>
    <string name="bid_title">投标</string>
    <string name="bid_money">账户可用金额（元）:</string>
    <string name="prompt">提示：最小出借金额1000元，金额必须是1000的整数倍</string>
    <string name="bidding_title">竞标</string>
    <string name="amount_of_the_bond_d">债券总额(元)</string>
    <string name="amount_of_the_bond">债券总额</string>
    <string name="floor_price">竞标底价</string>
    <string name="max_price">已出最高价</string>
    <string name="bid_prompt">提示：点击按钮提示您将确认竞拍金额并同意支付</string>
    <string name="xlistview_header_hint_normal">pull to refresh</string>
    <string name="xlistview_header_hint_ready">lose to refresh</string>
    <string name="xlistview_header_hint_loading">loading</string>
    <string name="xlistview_header_last_time">last update time：</string>
    <string name="xlistview_footer_hint_normal">load more</string>
    <string name="xlistview_footer_hint_ready">lose load more</string>
    <string name="phnoe_exclusive_title">手机专享</string>
    <string name="earn_score_title">赚积分</string>
    <string name="text">邀请好友 ,成功注册成为冠E通用户，即可获得冠通积分,每成功邀请一个用户即可获赠5分。快加入我们吧！</string>
    <string name="colon">:</string>
    <string name="borrow_money_title">我要借款</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="verification_title">验证账户信息</string>
    <string name="setpassword_title">设置交易密码</string>
    <string name="start_msp">正在启动安全支付</string>
    <string name="identity_verification_title">安全认证</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="retrieve_login_password">登录密码找回</string>
    <string name="reset_login_password">重置登录密码</string>
    <string name="setting_touxiang">请先拍照</string>
    <string name="paypassword_next">下一步</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="sure_big">确  定</string>
    <string name="paypassword_enterpassword">请输入支付密码</string>
    <string name="paypassword_settingpassword">设置支付密码</string>
    <string name="more_dashuju">冠e通大数据</string>
    <string name="more_safe">安全保障</string>
    <string name="more_baozhang">风控保障</string>
    <string name="more_question">常见问题</string>
    <string name="more_aboutus">关于我们</string>
    <string name="more_riskassessment">风险自评</string>
    <string name="more_yijian">意见反馈</string>
    <string name="more_gengxin">版本更新</string>
    <string name="star">*</string>
    <string name="payresult_sucess">出借成功</string>
    <string name="payresult_tomylend">查看出借</string>
    <string name="payresult_continue">继续浏览</string>
    <string name="verification_enter">请输入验证码</string>
    <string name="estabaccount_hintname">请输入您的真实姓名</string>
    <string name="estabaccount_hintidnumber">请输入您的身份证号码</string>
    <string name="estabaccount_branch">开户银行:</string>
    <string name="estabaccount_hintbranch">请选择您的开户银行</string>
    <string name="estabaccount_hintbankcard">请输入您的银行卡号</string>
    <string name="estabaccount_province">开户地区:</string>
    <string name="estabaccount_hintprovince">请选择您的银行卡开户地区</string>
    <string name="drawcashdetail_title">提现申请已提交，预计下一个工作日到账</string>
    <string name="drawcashdetail_bank">银行卡</string>
    <string name="drawcashdetail_drawcashmoney">提现金额</string>
    <string name="drawcashdetail_finish">完    成</string>
    <string name="hongbao">发红包，能赚钱!\n冠e通送您2016元红包基金</string>
    <string name="login_enterphonenumber">请输入登录账号</string>
    <string name="login_enterpassword">请输入登录密码</string>
    <string name="login_forgetpassword">忘记密码 ?</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册账号</string>
    <string name="login_out">退  出</string>
    <string name="passwordchange">修  改</string>
    <string name="originalpassword">请输入原登录密码</string>
    <string name="firstchangepassword">请输入新登录密码(8-12位数字+字符)</string>
    <string name="secondchangepassword">请确认新登录密码</string>
</resources>