<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    android:orientation="vertical">

    <!-- 标题 -->
    <include layout="@layout/default_main_cart_title" />
    <!-- 意见反馈 -->
    <TextView
        android:id="@+id/setting_feedback_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80"
        android:background="@drawable/layout_selector_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_30"
        android:text="@string/setting_feedback"
        android:textColor="@color/base_text_color"
        android:textSize="@dimen/font_size_26" />
    <!-- 分割线 -->
    <View style="@style/divider" />

    <!-- 推荐好友 -->
    <TextView
        android:id="@+id/setting_recommend_friends_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80"
        android:background="@drawable/layout_selector_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_30"
        android:text="@string/setting_recommend_friends"
        android:textColor="@color/base_text_color"
        android:textSize="@dimen/font_size_26" />
    <!-- 分割线 -->
    <View style="@style/divider" />

    <!-- 服务条款 -->
    <TextView
        android:id="@+id/setting_service_terms_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80"
        android:background="@drawable/layout_selector_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_30"
        android:text="@string/setting_service_terms"
        android:textColor="@color/base_text_color"
        android:textSize="@dimen/font_size_26" />
    <!-- 分割线 -->
    <View style="@style/divider" />

    <!-- 关于我们 -->
    <TextView
        android:id="@+id/setting_about_us_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80"
        android:background="@drawable/layout_selector_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_30"
        android:text="@string/setting_about_us"
        android:textColor="@color/base_text_color"
        android:textSize="@dimen/font_size_26" />
    <!-- 分割线 -->
    <View style="@style/divider" />

    <!-- 清除本地缓存 -->
    <RelativeLayout
        android:id="@+id/setting_clear_cache_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80"
        android:clickable="true"
        android:background="@drawable/layout_selector_bg"
        android:paddingLeft="@dimen/dimen_30"
        android:paddingRight="@dimen/dimen_44" >

        <!-- 清除缓存 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/setting_clear_cache"
            android:textColor="@color/base_text_color"
            android:textSize="@dimen/font_size_26" />

        <!-- 缓存大小的显示 -->
        <TextView
            android:id="@+id/setting_cache_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:textColor="@color/bottom_tab_text_color_nor"
            android:textSize="@dimen/font_size_26" />
    </RelativeLayout>
    <!-- 分割线 -->
    <View style="@style/divider" />

    <!-- 检查更新 -->
    <RelativeLayout
        android:id="@+id/setting_check_update_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80"
        android:background="@drawable/layout_selector_bg"
        android:paddingLeft="@dimen/dimen_30"
        android:paddingRight="@dimen/dimen_44" >

        <!-- 检查更新 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/setting_check_update"
            android:textColor="@color/base_text_color"
            android:textSize="@dimen/font_size_26" />

        <!-- 当前版本 -->
        <TextView
            android:layout_toLeftOf="@+id/update_version_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/update_version_num"
            android:textColor="@color/bottom_tab_text_color_nor"
            android:textSize="@dimen/font_size_26" />

        <TextView
            android:id="@+id/update_version_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="1.0.0"
            android:textColor="@color/bottom_tab_text_color_nor"
            android:textSize="@dimen/font_size_26" />
    </RelativeLayout>


    <!-- 退出登录 -->
    <Button
        android:id="@+id/setting_exit_login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80"
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginRight="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@drawable/setting_btn_shape_layout"
        android:padding="@dimen/dimen_0"
        android:text="@string/setting_exit_login"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_30" />

</LinearLayout>