<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:fitsSystemWindows="true"
        android:clipToPadding="true"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen_110"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/main_btn_ll"
        android:background="@color/base_divider_color"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/main_btn_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_98"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:alpha="0.97"
        android:background="@color/base_background"
        android:gravity="center"
        android:orientation="horizontal">
        <!-- 首页button -->
        <RadioGroup
            android:id="@+id/rg_radio"
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/dimen_6"
            >
            <RadioButton
                android:checked="true"
                android:id="@+id/home_btn"
                style="@style/main_tab_btn"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/home_selector"
                android:scaleType="matrix"
                android:text="@string/home" />
            <RadioButton
                android:id="@+id/classify_btn"
                style="@style/main_tab_btn"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/classify_selector"
                android:scaleType="matrix"
                android:text="@string/classify" />
            <RadioButton
                android:id="@+id/shopping_btn"
                style="@style/main_tab_btn"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/shop_selector"
                android:scaleType="matrix"
                android:text="@string/shopping" />
            <RadioButton
                android:id="@+id/mine_btn"
                style="@style/main_tab_btn"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/mine_selector"
                android:scaleType="matrix"
                android:text="@string/mine" />

        </RadioGroup>
    </LinearLayout>
</RelativeLayout>